# matchpick

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: example.txt  multiline.rs
