[package]
name = "matchpick"
description = "Find and replace multi-lines using a match-case"
version = "0.2.1"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/ArielHorwitz/matchpick"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
